Alignment works with inline toolbar, and fixed heading bug

--- a/frontend/src/components/postContent/postContent.scss
+++ b/frontend/src/components/postContent/postContent.scss
@@ -62,3 +62,12 @@
 		}
 	}
 }
+h1 {
+	font-size: 2em;
+}
+h2 {
+	font-size: 1.5em;
+}
+h3 {
+	font-size: 1em;
+}
